# beatsaber_automapper

./: .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  TODO.md  pyproject.toml
configs/: train.yaml
configs/data/: default.yaml
configs/model/: audio_encoder.yaml  lighting.yaml  note_pred.yaml  onset.yaml  sequence.yaml
configs/model/sequence/: sequence.yaml  sequence_small.yaml
docs/: architecture_v2.md  architecture_v3_analysis.md  architecture_v4_analysis.md  map-format.md
experiments/: README.md
experiments/queue/: initial.yaml  smoke.yaml
scripts/: app.py  auto_research.py  build_bucket_manifests.py  build_index.py  cohort_eda.py  compute_cohort_reference.py  dashboard.py  download_cohorts.py  download_data.py  evaluate_reference.py  filter_outliers.py  generate.py  leaderboard.py  monitor_resources.py  oneweek_run.sh  overnight_v3.sh  preprocess.py  run_training_pipeline.py  train.py  validate_mappers.py
src/beatsaber_automapper/: __init__.py
src/beatsaber_automapper/data/: __init__.py  audio.py  augment.py  beatmap.py  dataset.py  download.py  tokenizer.py
src/beatsaber_automapper/evaluation/: __init__.py  metrics.py  playability.py
tests/: test_audio.py  test_audio_encoder.py  test_beam_search.py  test_beatmap_parser.py  test_components.py  test_dataset.py  test_export.py  test_generate.py  test_generation.py  test_lighting_model.py  test_lighting_tokenizer.py  test_note_predictor.py  test_onset_model.py  test_onset_module.py  test_onset_planner.py  test_postprocess.py  test_seq_module.py  test_sequence_model.py  test_tokenizer.py
(+25 files in other folders)
