[project]
name = "beatsaber-automapper"
version = "0.1.0"
description = "AI system that generates high-quality Beat Saber levels from audio files"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "beatsaber_automapper contributors"}]
dependencies = [
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "lightning>=2.2",
    "librosa>=0.10",
    "hydra-core>=1.3",
    "omegaconf",
    "soundfile",
    "numpy",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
wandb = ["wandb"]

[project.scripts]
bsa-download = "scripts.download_data:main"
bsa-preprocess = "scripts.preprocess:main"
bsa-train = "scripts.train:main"
bsa-generate = "scripts.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beatsaber_automapper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
